# Faks

1st_Kolokvium/: CMakeLists.txt  main.cpp
1st_Kolokvium_P2/: 11_Exercise.cpp  11_Exercise_EN.cpp  13_Exercise.cpp  1_Exercise.cpp  2_Exercise.cpp  3_Exercise.cpp  3_Exercise_EN.cpp  4_Exercise_EN.cpp  5_Exercise_EN.cpp  CMakeLists.txt  boilerPlate.cpp  main.cpp
2nd_Kolokvium/: 01_Exercise.cpp  02_Exercise.cpp  03_Exercise.cpp  04_Exercise.cpp  05_Exercise.cpp  06_Exercise.cpp  07_Exercise.cpp  08_Exercise.cpp  09_Exercise.cpp  10_Exercise.cpp  11_Exercise.cpp  12_Exercise.cpp  13_Exercise.cpp  14_Exercise.cpp  15_Exercise.cpp  16_Exercise.cpp  17_Exercise.cpp  18_Exercise.cpp  19_Exercise.cpp  CMakeLists.txt  main.cpp
2nd_Kolokvium_Extra/: 01_Exercise.cpp  02_Exercise.cpp  03_Exercise.cpp  04_Exercise.cpp  05_Exercise.cpp  06_Exercise.cpp  07_Exercise.cpp  08_Exercise.cpp  09_Exercise.cpp  10_Exercise.cpp  11_Exercise.cpp  12_Exercise.cpp  CMakeLists.txt  main.cpp
2nd_Kolokvium_Extra_Extra/: 01_Exercise.cpp  02_Exercise.cpp  03_Exercise.cpp  04_Exercise.cpp  05_Exercise.cpp  06_Exercise.cpp  07_Exercise.cpp  08_Exercise.cpp  09_Exercise.cpp  12_Exercise.cpp  CMakeLists.txt  main.cpp
Auditory Exercise 2/: main.cpp
Auditory Exercise 3/: main.cpp
Auditory Exercise 4/: CMakeLists.txt  main.cpp
Auditory_Exercises_07/: CMakeLists.txt  Task_01.cpp  Task_02.cpp  Task_03.cpp  Task_04.cpp  Task_05.cpp  Task_06.cpp  Task_07.cpp  Test.cpp  main.cpp
Auditory_Exercises_09/: CMakeLists.txt  Task_1.cpp  Task_2.cpp  Task_3.cpp  main.cpp
Auditory_Exercises_10/: CMakeLists.txt  Task_01.cpp  Task_02.cpp  Task_03.cpp  Task_04.cpp  Task_05.cpp  Task_06.cpp  Task_07.cpp  main.cpp
Auditory_Exercises_6/: CMakeLists.txt  main.cpp
Auditory_Exercises_6_Duo/: CMakeLists.txt  main.cpp
Typeshit/: CMakeLists.txt  bullshit.cpp  codeWarsP1.cpp  codeWarsP2.cpp  codeWarsP3.cpp  codeWarsP4.cpp  codeWarsP5.cpp  codeWarsP6.cpp  codeWarsP7.cpp  game.cpp  kolokviumPrvaZad.cpp  kolokviumTretaZad.cpp  kolokviumVtoraZad.cpp  labs.cpp  main.cpp  prvaZad.cpp  tretaZad.cpp  vtoraZad.cpp
