cmake_minimum_required(VERSION 3.29)
project(1st_Kolokvium_P2)

set(CMAKE_CXX_STANDARD 20)

add_executable(1st_Kolokvium_P2 main.cpp
        1_Exercise.cpp
        2_Exercise.cpp
        3_Exercise.cpp
        boilerPlate.cpp
        11_Exercise.cpp
        13_Exercise.cpp
        3_Exercise_EN.cpp
        4_Exercise_EN.cpp
        5_Exercise_EN.cpp
        11_Exercise_EN.cpp
)
