cmake_minimum_required(VERSION 3.30)
project(2nd_Kolokvium)

set(CMAKE_CXX_STANDARD 20)

add_executable(2nd_Kolokvium main.cpp
        01_Exercise.cpp
        02_Exercise.cpp
        03_Exercise.cpp
        04_Exercise.cpp
        05_Exercise.cpp
        06_Exercise.cpp
        07_Exercise.cpp
        08_Exercise.cpp
        09_Exercise.cpp
        10_Exercise.cpp
        11_Exercise.cpp
        12_Exercise.cpp
        13_Exercise.cpp
        14_Exercise.cpp
        15_Exercise.cpp
        16_Exercise.cpp
        17_Exercise.cpp
        18_Exercise.cpp
        19_Exercise.cpp)
