cmake_minimum_required(VERSION 3.30)
project(2nd_Kolokvium_Extra)

set(CMAKE_CXX_STANDARD 20)

add_executable(2nd_Kolokvium_Extra main.cpp
        01_Exercise.cpp
        02_Exercise.cpp
        03_Exercise.cpp
        04_Exercise.cpp
        05_Exercise.cpp
        06_Exercise.cpp
        07_Exercise.cpp
        08_Exercise.cpp
        09_Exercise.cpp
        10_Exercise.cpp
        11_Exercise.cpp
        12_Exercise.cpp
        10_Exercise.cpp)
