cmake_minimum_required(VERSION 3.29)
project(Auditory_Exercises_07)

set(CMAKE_CXX_STANDARD 20)

add_executable(Auditory_Exercises_07 main.cpp
        Task_01.cpp
        Task_02.cpp
        Task_03.cpp
        Task_04.cpp
        Task_05.cpp
        Task_06.cpp
        Test.cpp
        Task_07.cpp)
