cmake_minimum_required(VERSION 3.29)
project(Typeshit)

set(CMAKE_CXX_STANDARD 20)

add_executable(Typeshit main.cpp vtoraZad.cpp
        prvaZad.cpp
        tretaZad.cpp
        codeWarsP1.cpp
        codeWarsP2.cpp
        codeWarsP3.cpp
        codeWarsP4.cpp
        codeWarsP5.cpp
        codeWarsP6.cpp
        codeWarsP7.cpp
        kolokviumPrvaZad.cpp
        kolokviumVtoraZad.cpp
        kolokviumTretaZad.cpp
        labs.cpp
        bullshit.cpp
        game.cpp
)
